fix playhead gap
on a large monitor, there is a small gap between the progress bar and the playhead

--- a/netflix-video-player/styles.css
+++ b/netflix-video-player/styles.css
@@ -71,6 +71,8 @@ body {
   max-height: 25px;
   max-width: 25px;
   border-radius: 50%;
+  position: relative;
+  left: -2px;
 }
 
 .video-container .controls {
